--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         reader.onloadend = () => {
           const dataUrl = reader.result;
           const base64Data = dataUrl.split(",")[1];
-          const targetUrl = "https://zl77aqpwm5yvlrocwtw4c5nc7y0xxkco.lambda-url.ap-south-1.on.aws/";
-          fetch(proxyUrl + targetUrl, {
+          fetch("https://zl77aqpwm5yvlrocwtw4c5nc7y0xxkco.lambda-url.ap-south-1.on.aws/", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ image: base64Data })
