--- a/index.html
+++ b/index.html
@@ -2,56 +2,128 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Check Your Liveness</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Mobile Liveness Checker</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- FontAwesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body { width: 100vw; height: 100vh; overflow: hidden; font-family: 'Poppins', sans-serif; }
-    body { background: linear-gradient(135deg, #0d0d0d, #1a1a1a); display: flex; justify-content: center; align-items: center; }
-    .outer-container { display: flex; gap: 60px; width: 90vw; height: 90vh; }
-    .capture-container { flex: 0 0 40%; background: rgba(255,255,255,0.05); backdrop-filter: blur(10px); border-radius: 20px; padding: 20px; display: flex; flex-direction: column; justify-content: center; align-items: center; box-shadow: 0 10px 30px rgba(0,0,0,0.7); transition: transform 0.3s ease; }
-    .capture-container:hover { transform: translateY(-5px); }
-    .capture-container .header { font-size: 32px; font-weight: 700; color: #ddd; margin-bottom: 20px; text-transform: lowercase; text-shadow: 0 0 10px rgba(255,255,255,0.3); }
-    .camera-container { width: 360px; height: 480px; background: #000; border: 3px solid #fff; border-radius: 10px; overflow: hidden; margin-bottom: 20px; box-shadow: 0 0 20px rgba(255,255,255,0.3); }
-    .camera-container video { width: 100%; height: 100%; object-fit: cover; }
-    #capture { padding: 15px 30px; background: #fff; color: #000; border: none; border-radius: 8px; cursor: pointer; font-size: 18px; font-weight: 600; transition: transform 0.2s ease, box-shadow 0.2s ease; box-shadow: 0 0 10px #fff; }
-    #capture:hover { transform: translateY(-3px); box-shadow: 0 0 20px #fff; }
-    #result { margin-top: 20px; font-size: 20px; color: #fff; font-weight: 600; text-shadow: 0 0 8px #fff; }
-    .history-container { flex: 0 0 50%; background: rgba(255,255,255,0.05); backdrop-filter: blur(10px); border-radius: 20px; padding: 30px; display: flex; flex-direction: column; box-shadow: 0 10px 30px rgba(0,0,0,0.7); transition: transform 0.3s ease; }
-    .history-container:hover { transform: translateY(-5px); }
-    .history-container .header { font-size: 28px; font-weight: 700; color: #ddd; margin-bottom: 20px; text-shadow: 0 0 10px rgba(255,255,255,0.3); text-align: center; }
-    .history-list { flex: 1; width: 100%; overflow-y: auto; padding: 0 20px; margin-bottom: 20px; }
-    .history-item { display: flex; align-items: center; background: #222; padding: 15px; border-radius: 8px; margin-bottom: 15px; border: 2px solid transparent; transition: transform 0.3s, box-shadow 0.3s; }
-    .history-item:hover { transform: scale(1.02); box-shadow: 0 0 15px rgba(255,255,255,0.3); }
-    .history-item img { width: 60px; height: 80px; object-fit: cover; border-radius: 5px; margin-right: 15px; box-shadow: 0 0 10px #fff; }
-    .history-item p { font-size: 18px; color: #ccc; font-weight: 600; }
-    .green-border { border-color: #00ff00; box-shadow: 0 0 10px #00ff00; }
-    .red-border { border-color: #ff0000; box-shadow: 0 0 10px #ff0000; }
-    #clearHistory { padding: 15px; background: #333; color: #fff; border: none; border-radius: 8px; font-size: 18px; font-weight: 600; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s; box-shadow: 0 0 10px #fff; }
-    #clearHistory:hover { transform: translateY(-3px); box-shadow: 0 0 20px #fff; }
-    .history-list::-webkit-scrollbar { width: 8px; }
-    .history-list::-webkit-scrollbar-track { background: #121212; border-radius: 10px; }
-    .history-list::-webkit-scrollbar-thumb { background: #333; border-radius: 10px; }
+    body {
+      background: linear-gradient(135deg, #0d0d0d, #1a1a1a);
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    .outer-container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      height: 100vh;
+      padding: 20px;
+      justify-content: center;
+      align-items: center;
+    }
+    .capture-container, .history-container {
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 15px;
+      padding: 20px;
+      width: 100%;
+      max-width: 400px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+    }
+    .capture-container:hover, .history-container:hover {
+      transform: translateY(-5px);
+      transition: transform 0.3s ease;
+    }
+    .camera-container {
+      position: relative;
+      width: 100%;
+      border: 3px solid #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      background: #000;
+    }
+    .camera-container video {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    #capture {
+      width: 100%;
+      margin-top: 15px;
+    }
+    #result {
+      margin-top: 15px;
+      font-size: 1.2rem;
+      text-align: center;
+    }
+    .history-container .header {
+      font-size: 1.5rem;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    .history-list {
+      max-height: 300px;
+      overflow-y: auto;
+      margin-top: 10px;
+    }
+    .history-item {
+      display: flex;
+      align-items: center;
+      background: #222;
+      padding: 10px;
+      border-radius: 8px;
+      margin-bottom: 10px;
+      border: 2px solid transparent;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .history-item:hover {
+      transform: scale(1.02);
+      box-shadow: 0 0 15px rgba(255,255,255,0.3);
+    }
+    .history-item img {
+      width: 60px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 5px;
+      margin-right: 10px;
+    }
+    .green-border {
+      border-color: #00ff00;
+      box-shadow: 0 0 10px #00ff00;
+    }
+    .red-border {
+      border-color: #ff0000;
+      box-shadow: 0 0 10px #ff0000;
+    }
+    #clearHistory {
+      width: 100%;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
   <div class="outer-container">
-    <section class="capture-container">
-      <div class="header">check your liveness</div>
+    <div class="capture-container text-center">
+      <h2 class="mb-3">Mobile Liveness Checker</h2>
       <div class="camera-container">
-        <video id="video" autoplay></video>
+        <video id="video" autoplay playsinline></video>
       </div>
-      <button id="capture">Capture & Verify</button>
+      <button id="capture" class="btn btn-primary mt-3">
+        <i class="fas fa-camera"></i> Capture & Verify
+      </button>
       <p id="result"></p>
-    </section>
-    <section class="history-container">
-      <div class="header">Results</div>
+    </div>
+    <div class="history-container">
+      <h4 class="text-center">History</h4>
       <div class="history-list" id="history"></div>
-      <button id="clearHistory">Clear History</button>
-    </section>
+      <button id="clearHistory" class="btn btn-secondary">Clear History</button>
+    </div>
   </div>
-  <canvas id="canvas" width="360" height="480" style="display: none;"></canvas>
+  <canvas id="canvas" style="display: none;"></canvas>
   <script>
     const video = document.getElementById("video");
     const canvas = document.getElementById("canvas");
@@ -60,12 +132,38 @@
     const historyContainer = document.getElementById("history");
     const clearHistoryBtn = document.getElementById("clearHistory");
     let history = JSON.parse(localStorage.getItem("captureHistory")) || [];
-    navigator.mediaDevices.getUserMedia({ video: true })
+
+    // Request video with rear camera if available
+    navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
       .then(stream => { video.srcObject = stream; })
       .catch(err => { console.error("Error accessing webcam:", err); });
+
     captureBtn.addEventListener("click", () => {
+      // Set desired output size (3:4 ratio)
+      const outputWidth = 360, outputHeight = 480;
+      canvas.width = outputWidth;
+      canvas.height = outputHeight;
       const context = canvas.getContext("2d");
-      context.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+      const vw = video.videoWidth;
+      const vh = video.videoHeight;
+      const desiredAspect = outputWidth / outputHeight; // 0.75
+
+      let sx, sy, sWidth, sHeight;
+      if (vw / vh > desiredAspect) {
+        // Video is wider than desired; crop sides.
+        sHeight = vh;
+        sWidth = vh * desiredAspect;
+        sx = (vw - sWidth) / 2;
+        sy = 0;
+      } else {
+        // Video is taller than desired; crop top and bottom.
+        sWidth = vw;
+        sHeight = vw / desiredAspect;
+        sx = 0;
+        sy = (vh - sHeight) / 2;
+      }
+      context.drawImage(video, sx, sy, sWidth, sHeight, 0, 0, outputWidth, outputHeight);
       canvas.toBlob(blob => {
         const reader = new FileReader();
         reader.readAsDataURL(blob);
@@ -86,16 +184,22 @@
         };
       }, "image/jpeg");
     });
+
     function addToHistory(blob, data) {
       if (history.length >= 10) history.shift();
       const reader = new FileReader();
       reader.onload = function(e) {
-        history.push({ imgSrc: e.target.result, result: `Liveness: ${data.label}, Confidence: ${data.confidence.toFixed(2)}`, label: data.label });
+        history.push({
+          imgSrc: e.target.result,
+          result: `Liveness: ${data.label}, Confidence: ${data.confidence.toFixed(2)}`,
+          label: data.label
+        });
         localStorage.setItem("captureHistory", JSON.stringify(history));
         updateHistoryUI();
       };
       reader.readAsDataURL(blob);
     }
+
     function updateHistoryUI() {
       historyContainer.innerHTML = "";
       history.forEach(item => {
@@ -111,12 +215,15 @@
         historyContainer.appendChild(div);
       });
     }
+
     clearHistoryBtn.addEventListener("click", () => {
       history = [];
       localStorage.removeItem("captureHistory");
       updateHistoryUI();
     });
+
     document.addEventListener("DOMContentLoaded", updateHistoryUI);
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
