--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       overflow-x: hidden;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #0d0d0d, #1a1a1a);
-      /* Use safe-area insets for mobile devices */
       padding: env(safe-area-inset-top) 20px env(safe-area-inset-bottom) 20px;
     }
     
@@ -29,7 +28,6 @@
       width: 100%;
       max-width: 1200px;
       margin: auto;
-      /* Allow container to grow with content instead of forcing a fixed height */
       min-height: calc(100vh - 40px);
     }
     
@@ -117,9 +115,10 @@
       text-shadow: 0 0 10px rgba(255,255,255,0.3);
       text-align: center;
     }
+    /* Fixed height with scrollable content */
     .history-list {
-      flex: 1;
       width: 100%;
+      height: 300px; /* Fixed height */
       overflow-y: auto;
       padding: 0 10px;
       margin-bottom: 20px;
