--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     /* Fixed height with scrollable content */
     .history-list {
       width: 100%;
-      height: 300px; /* Fixed height */
+      height: 100%; /* Fixed height */
       overflow-y: auto;
       padding: 0 10px;
       margin-bottom: 20px;
