--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       overflow-x: hidden;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #0d0d0d, #1a1a1a);
+      /* Use safe-area insets for mobile devices */
       padding: env(safe-area-inset-top) 20px env(safe-area-inset-bottom) 20px;
     }
     
@@ -28,6 +29,7 @@
       width: 100%;
       max-width: 1200px;
       margin: auto;
+      /* Allow container to grow with content instead of forcing a fixed height */
       min-height: calc(100vh - 40px);
     }
     
@@ -115,10 +117,10 @@
       text-shadow: 0 0 10px rgba(255,255,255,0.3);
       text-align: center;
     }
-    /* Fixed height with scrollable content */
+    /* The history list will expand naturally up to a max-height, then scroll */
     .history-list {
       width: 100%;
-      height: 100%; /* Fixed height */
+      max-height: 50vh; /* Adjust as needed */
       overflow-y: auto;
       padding: 0 10px;
       margin-bottom: 20px;
